@@ -1,3 +1,7 @@
+* 2013-10-24 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 29339: Conflicts for multiday appointments.
+
 * 2013-10-23 - thorben.betten@open-xchange.com
 
  - Fix for bug 29356: Introduced property "com.openexchange.mail.transport.removeMimeVersionInSubParts" to 'transport.properties' to specify
